# peacock-ocelli

./: Cargo.toml
src/: camera.rs  lib.rs  model.rs
