[package]
name = "peacock-ocelli"
version = "0.1.0"
edition = "2021"

[dependencies]
peacock = { workspace = true, features = ["build"] }
peacock-pinion.workspace = true
iced = { workspace = true, features = ["wgpu"] }
iced_renderer = { version = "0.13.0", optional = true }
iced_wgpu = { version = "0.13.5", optional = true }
iced_tiny_skia = { version = "0.13.0", optional = true }
glam = "0.29.1"
